# tbot_ws

./: README.md  build.sh  install.sh  source  ws.rosinstall
src/nmail_turtlebot/: CMakeLists.txt  package.xml
src/nmail_turtlebot/launch/: nmailbot_bringup.launch
src/nmail_turtlebot/launch/config_rviz/: demo_turtlebot.rviz
src/nmail_turtlebot/launch/includes/: description.launch.xml  robot.launch.xml
src/nmail_turtlebot/robots/: kobuki_hexagons_stand_up_d435.urdf.xacro  kobuki_hexagons_velodyne.urdf.xacro
src/nmail_turtlebot/urdf/sensors/: VLP-16.urdf.xacro  _r430.urdf.xacro
src/nmail_turtlebot/urdf/stacks/: hexagons.urdf.xacro  hexagons_stand_up.urdf.xacro
